PIPESHIFT INTEGRATION: BUGFIXES; REFACTORING; Changed subscribe to create contact instead of user

--- a/public/pipeshift/css/theme.css
+++ b/public/pipeshift/css/theme.css
@@ -415,7 +415,7 @@ body .fus-btns .btn {
 }
 
 .feature {
-    width: 140px;
+    width: 145px;
 }
 
 .feature > a {
